--- a/about/index.html
+++ b/about/index.html
@@ -246,7 +246,7 @@
     <p>I&rsquo;m <strong>Ashish Veeragoni</strong> and this is my blog.</p>
 <p>I set-up this blog after trying various hugo themes, hope this lasts. I&rsquo;m interested and build projects mostly around computer vision. I majored in Mechanical Engineering and begin writing code around my final year ᕙ(`▿´)ᕗ</p>
 <hr>
-<p>☎️📨 You can find me on <a href="https://www.linkedin.com/in/ashish-veeragoni/">linkedin</a>, <a href="https://twitter.com/sunny27369">twitter</a> or <a href="https://t.me/ashu369">telegram</a></p>
+<p>☎️📨 You can find me on <a href="">linkedin</a>, <a href="">twitter</a> or <a href="https://t.me/ashu369">telegram</a></p>
 
   </main>
 
